2003-01-24  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* pkgIndex.tcl:
	* dns.man:   Added Tcl 8.2 as minimum Tcl version to resolve bug
	* dns.tcl:   #674330. Upped version to 1.0.2
	* dns.test:  Added some tests for the dns uri handling and fixed a
	bug in decoding the class and type section.

2003-01-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* dns.man: More semantic markup, less visual one.

2002-08-30  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* dns.tcl: Updated 'info exist' to 'info exists'.

2002-06-07  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* dns.man: 
	* dns.tcl:
	* pkgIndex.tcl: Version up to 1.0.1

	* dns.tcl: moved var initialization code to the end, as it uses
	  the 'dns::configure' command, and thus should be called after
	  its definition. This is the reason for bug #564670, thus now
	  fixed.

2002-06-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* dns.man: Added note to manpage regarding DNS via TCP and
	  possible pitfalls.